[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.1.0"
bitcoin = "0.32.5"
hex = "0.4.3"
rand = "0.8"

tiny-keccak = { version = "2.0", features = ["keccak"] }
base58 = "0.2"
ed25519-dalek = "2.1.1"

reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"